--- a/PrograAvanzada/Northwind/FrontEnd/Views/Category/Index.cshtml
+++ b/PrograAvanzada/Northwind/FrontEnd/Views/Category/Index.cshtml
@@ -13,7 +13,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.CategoryId)
+                @Html.DisplayNameFor(model => model.CategoryID)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.CategoryName)
@@ -21,30 +21,29 @@
             <th>
                 @Html.DisplayNameFor(model => model.Description)
             </th>
-
+           
             <th></th>
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CategoryId)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CategoryName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Description)
-                </td>
-                
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { id=item.CategoryId }) |
-                    @Html.ActionLink("Details", "Details", new { id=item.CategoryId }) |
-                    @Html.ActionLink("Delete", "Delete", new { id=item.CategoryId })
-                </td>
-            </tr>
-        }
+@foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.CategoryID)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CategoryName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Description)
+            </td>
+          
+            <td>
+                    @Html.ActionLink("Edit", "Edit", new { id=item.CategoryID }) |
+                @Html.ActionLink("Details", "Details", new {  id=item.CategoryID }) |
+                    @Html.ActionLink("Delete", "Delete", new { id=item.CategoryID })
+            </td>
+        </tr>
+}
     </tbody>
 </table>
